# thesis

./: .gitignore
docs/obstacle avoidance/: list
docs/obstacle_avoidance/: list  mklist
proposal/: .gitignore  preamble.tex  reference.bib  reference.tex  thesis.proposal.tex
proposal/defense/: slides.pptx
proposal/paper.works/: proposal.change.letter.docx  proposal.report.form.docx
proposal/paperworks/: template.dotx  باسمه تعالي.docx
proposal/sec/: abstract.tex  eval.tex  hardwares.tex  previous_works.tex  research_feild.tex  timings.tex  title.tex  why_this.tex
report/: .gitignore  clear  main.tex  texmaker.tks
report/images/: trim.bash
report/pages/: 0.preamble.tex  0.precoms.tex  1.firstpages.tex  2.abstract.tex  3.chap1.tex  5.references.tex  6.abstract_english.tex  7.lastpages.tex
report/presentation/: defence.pptx  presentation.pptx  seminar.pptx
src/: .gitignore  CMakeLists.txt  Q.py  README.md  blocks.py  config.hpp  exceps.py  main.cpp  main.helper.cpp  main.helper.hpp  main.py  thesis.pro  world.py
src.bk/: CMakeLists.txt  config.hpp  main.cpp  main.helper.cpp
src.bk/images/1goal/: refmat_iter_20.fig
src.bk/images/3goal/: refmat_iter_20.fig
src.bk/inc/: colormod.hpp  fci.hpp  qcom.hpp  stdafx.hpp
src.bk/inc/qcom/: qcom.sep.hpp
src.bk/inc/rl/: maze_qlearning.hpp
src.bk/inc/worlds/: maze.hpp
src.bk/src/: config.cpp  fci.cpp  qcom.cpp  sep.cpp
src.bk/src/rl/: maze_qlearning.cpp
src/.build/: collect_agents.py  collect_agents_0.py  collect_agents_1.py  collect_agents_2.py  collect_agents_3.py  collect_data.py  collect_time.py  (+12 more)
(+835 files in other folders)
